--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,40 +1,57 @@
 <html>
-<head>
-  <title>Mon title</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
-<body>
-<div class="container-fluid">
-  <div class="d-flex flex-column align-items-center justify-content-center w-100" style="height:100vh;">
-    <h1>Chapter form</h1>
-    <form class="d-flex flex-column card w-50" method="post" action="/chapters" >
-      <div class="card-body">
-        <div class="form-group">
-          <label>Title</label>
-          <input name="title" class="form-control" type="text" />
-        </div>
-        <div class="form-group">
-          <label>nbrOfLesson</label>
-          <input name="nbrOfLesson" class="form-control" type="number" />
-        </div>
-        <div class="form-group">
-          <input name="active" class="form-checkbox-control" type="checkbox" id="active" />
-          <label class="form-check-label" for="active">active</label>
-        </div>
-        <% if (locals.errors && errors && errors.length) { %>
-          <ul>
-            <% errors.forEach((error) => { %>
+  <head>
+    <title>Mon title</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div
+        class="d-flex flex-column align-items-center justify-content-center w-100"
+        style="height: 100vh"
+      >
+        <h1>Chapter form</h1>
+        <form
+          class="d-flex flex-column card w-50"
+          method="post"
+          action="/chapters"
+        >
+          <div class="card-body">
+            <div class="mb-3">
+              <label>Title</label>
+              <input name="title" class="form-control" type="text" />
+            </div>
+            <div class="mb-3">
+              <label>nbrOfLesson</label>
+              <input name="nbrOfLesson" class="form-control" type="number" />
+            </div>
+            <div class="mb-3">
+              <input
+                name="active"
+                class="form-checkbox-control"
+                type="checkbox"
+                id="active"
+              />
+              <label class="form-check-label" for="active">active</label>
+            </div>
+            <% if (locals.errors && errors && errors.length) { %>
+            <ul>
+              <% errors.forEach((error) => { %>
               <li><%= error %></li>
-            <% }) %>
-          </ul>
-        <% } %>
-        <div>
-          <input type="submit" value="Submit" class="btn btn-primary" />
-        </div>
+              <% }) %>
+            </ul>
+            <% } %>
+            <div>
+              <input type="submit" value="Submit" class="btn btn-primary" />
+            </div>
+          </div>
+        </form>
+        <a href="/chapters" class="btn btn-primary">Return</a>
       </div>
-    </form>
-    <a href="/chapters" class="btn btn-primary">Return</a>
-  </div>
-</div>
-</body>
+    </div>
+  </body>
 </html>
